--- a/templates/messages/show.html.twig
+++ b/templates/messages/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base-admin.html.twig' %}
 
 {% block title %}Messages{% endblock %}
 
@@ -7,10 +7,6 @@
 
     <table class="table">
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ message.id }}</td>
-            </tr>
             <tr>
                 <th>Name</th>
                 <td>{{ message.name }}</td>
@@ -35,8 +31,6 @@
     </table>
 
     <a href="{{ path('messages_index') }}">back to list</a>
-
-    <a href="{{ path('messages_edit', {'id': message.id}) }}">edit</a>
 
     {{ include('messages/_delete_form.html.twig') }}
 {% endblock %}
