--- a/templates/attributes/edit.html.twig
+++ b/templates/attributes/edit.html.twig
@@ -3,11 +3,34 @@
 {% block title %}Edit Attributes{% endblock %}
 
 {% block body %}
-    <h1>Edit Attributes</h1>
 
-    {{ include('attributes/_form.html.twig', {'button_label': 'Update'}) }}
+        <!-- Content Header (Page header) -->
+    <div class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1 class="m-0 text-dark">Ludo et Sophie - Edition d'un attribut</h1>
+            </div><!-- /.col -->
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
+                <li class="breadcrumb-item active">Attributs</li>
+                </ol>
+            </div><!-- /.col -->
+            </div><!-- /.row -->
+        </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.content-header -->
 
-    <a href="{{ path('attributes_index') }}">back to list</a>
+    <!-- Main content -->
+    <div class="content">
+        <div class="container-fluid">
 
-    {{ include('attributes/_delete_form.html.twig') }}
-{% endblock %}
+        {{ include('attributes/_form.html.twig', {'button_label': 'Update'}) }}
+
+        <a href="{{ path('attributes_index') }}">back to list</a>
+
+        {{ include('attributes/_delete_form.html.twig') }}
+
+
+</div></div>{% endblock %}
