--- a/templates/attributes/show.html.twig
+++ b/templates/attributes/show.html.twig
@@ -3,28 +3,50 @@
 {% block title %}Attributes{% endblock %}
 
 {% block body %}
-    <h1>Attributes</h1>
+<!-- Content Header (Page header) -->
+<div class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1 class="m-0 text-dark">Ludo et Sophie - Nouvel attribut</h1>
+            </div><!-- /.col -->
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
+                    <li class="breadcrumb-item active">Attributs</li>
+                </ol>
+            </div><!-- /.col -->
+        </div><!-- /.row -->
+    </div><!-- /.container-fluid -->
+</div>
+<!-- /.content-header -->
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ attribute.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ attribute.name }}</td>
-            </tr>
-            <tr>
-                <th>Value</th>
-                <td>{{ attribute.value }}</td>
-            </tr>
-        </tbody>
-    </table>
+<!-- Main content -->
+<div class="content">
+    <div class="container-fluid">
 
-    <a href="{{ path('attributes_index') }}">back to list</a>
+        <table class="table">
+            <tbody>
+                <tr>
+                    <th>Id</th>
+                    <td>{{ attribute.id }}</td>
+                </tr>
+                <tr>
+                    <th>Name</th>
+                    <td>{{ attribute.name }}</td>
+                </tr>
+                <tr>
+                    <th>Value</th>
+                    <td>{{ attribute.value }}</td>
+                </tr>
+            </tbody>
+        </table>
 
-    <a href="{{ path('attributes_edit', {'id': attribute.id}) }}">edit</a>
+        <a href="{{ path('attributes_index') }}">back to list</a>
 
-    {{ include('attributes/_delete_form.html.twig') }}
-{% endblock %}
+        <a href="{{ path('attributes_edit', {'id': attribute.id}) }}">edit</a>
+
+        {{ include('attributes/_delete_form.html.twig') }}
+
+    </div>
+</div>{% endblock %}
