--- a/templates/base-admin.html.twig
+++ b/templates/base-admin.html.twig
@@ -30,14 +30,8 @@
                 <!-- Left navbar links -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+                        <a class="nav-link" data-widget="pushmenu" href="#" role="button" title="Rabattre/déployer la barre de navigation"><i class="fas fa-bars"></i></a>
                     </li>
-                    <li class="nav-item d-none d-sm-inline-block">
-                        <a href="{{ path('home') }}" title="Retour vers le site" class="nav-link">Home</a>
-                    </li>
-                    {# <li class="nav-item d-none d-sm-inline-block">
-                        <a href="#" class="nav-link">Contact</a>
-                    </li> #}
                 </ul>
 
                 <!-- SEARCH FORM -->
@@ -54,95 +48,22 @@
 
                 <!-- Right navbar links -->
                 <ul class="navbar-nav ml-auto">
-                <!-- Messages Dropdown Menu -->
-                {# <li class="nav-item dropdown">
-                    <a class="nav-link" data-toggle="dropdown" href="#">
-                    <i class="far fa-comments"></i>
-                    <span class="badge badge-danger navbar-badge">3</span>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                    <a href="#" class="dropdown-item">
-                        <!-- Message Start -->
-                        <div class="media">
-                        <img src="dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
-                        <div class="media-body">
-                            <h3 class="dropdown-item-title">
-                            Brad Diesel
-                            <span class="float-right text-sm text-danger"><i class="fas fa-star"></i></span>
-                            </h3>
-                            <p class="text-sm">Call me whenever you can...</p>
-                            <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
-                        </div>
-                        </div>
-                        <!-- Message End -->
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
-                        <!-- Message Start -->
-                        <div class="media">
-                        <img src="dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
-                        <div class="media-body">
-                            <h3 class="dropdown-item-title">
-                            John Pierce
-                            <span class="float-right text-sm text-muted"><i class="fas fa-star"></i></span>
-                            </h3>
-                            <p class="text-sm">I got your message bro</p>
-                            <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
-                        </div>
-                        </div>
-                        <!-- Message End -->
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
-                        <!-- Message Start -->
-                        <div class="media">
-                        <img src="dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
-                        <div class="media-body">
-                            <h3 class="dropdown-item-title">
-                            Nora Silvester
-                            <span class="float-right text-sm text-warning"><i class="fas fa-star"></i></span>
-                            </h3>
-                            <p class="text-sm">The subject goes here</p>
-                            <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
-                        </div>
-                        </div>
-                        <!-- Message End -->
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item dropdown-footer">See All Messages</a>
-                    </div>
-                </li> #}
                 <!-- Notifications Dropdown Menu -->
-                {# <li class="nav-item dropdown">
+                <li class="nav-item dropdown">
                     <a class="nav-link" data-toggle="dropdown" href="#">
-                    <i class="far fa-bell"></i>
-                    <span class="badge badge-warning navbar-badge">15</span>
+                        <i class="fas fa-user fa-fw"></i>
                     </a>
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                    <span class="dropdown-header">15 Notifications</span>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
-                        <i class="fas fa-envelope mr-2"></i> 4 new messages
-                        <span class="float-right text-muted text-sm">3 mins</span>
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
-                        <i class="fas fa-users mr-2"></i> 8 friend requests
-                        <span class="float-right text-muted text-sm">12 hours</span>
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
-                        <i class="fas fa-file mr-2"></i> 3 new reports
-                        <span class="float-right text-muted text-sm">2 days</span>
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="{{ path('home') }}" class="dropdown-item">
+                            <i class="nav-icon fas fa-home"></i>Acceuil du site
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a href="{{ path('app_logout') }}" class="dropdown-item">
+                            <i class="nav-icon fas fa-sign-out-alt"></i>Déconnexion
+                        </a>
                     </div>
-                </li> #}
-                {# <li class="nav-item">
-                    <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button"><i
-                        class="fas fa-th-large"></i></a>
-                </li> #}
+                </li>
                 </ul>
             </nav>
             <!-- /.navbar -->
@@ -168,24 +89,14 @@
                     <!-- Sidebar Menu -->
                     <nav class="mt-2">
                         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                            
                             {# Emails #}
                             <li class="nav-item has-treeview">
-                                <a href="#" class="nav-link">
+                                <a href="{{ path('messages_index') }}" class="nav-link">
                                     <i class="nav-icon far fa-envelope"></i>
                                     <p>
-                                        Boite de messagerie
-                                        <i class="fas fa-angle-left right"></i>
+                                        Messages
                                     </p>
                                 </a>
-                                <ul class="nav nav-treeview">
-                                    <li class="nav-item">
-                                        <a href="{{ path('messages_index') }}" class="nav-link">
-                                            <i class="far fa-circle nav-icon"></i>
-                                            <p>Tous les messages</p>
-                                        </a>
-                                    </li>
-                                </ul>
                             </li>
                             {# Comptes utilisateurs #}
                             <li class="nav-item has-treeview">
@@ -203,25 +114,22 @@
                                             <p>Liste des utilisateurs</p>
                                         </a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a href="{{ path('users_new') }}" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>Nouvel utilisateur</p>
+                                        </a>
+                                    </li>
                                 </ul>
                             </li>
                             {# Avis des clients #}
                             <li class="nav-item has-treeview">
-                                <a href="#" class="nav-link">
+                                <a href="{{ path('comments_index') }}" class="nav-link">
                                     <i class="nav-icon far fa-comments"></i>
                                     <p>
-                                        Avis des clients
-                                        <i class="fas fa-angle-left right"></i>
+                                        Avis clients
                                     </p>
                                 </a>
-                                <ul class="nav nav-treeview">
-                                    <li class="nav-item">
-                                        <a href="{{ path('comments_index') }}" class="nav-link">
-                                            <i class="far fa-circle nav-icon"></i>
-                                            <p>Liste des avis clients</p>
-                                        </a>
-                                    </li>
-                                </ul>
                             </li>
                             {# Gestion des produits #}
                             <li class="nav-item has-treeview">
@@ -276,6 +184,12 @@
                                             <p>Pages</p>
                                         </a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a href="{{ path('pages_new') }}" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>Nouvelle page</p>
+                                        </a>
+                                    </li>
                                 </ul>
                             </li>
 
@@ -291,16 +205,6 @@
                 {% block body %}{% endblock %}
             </div>
             <!-- /.content-wrapper -->
-
-            <!-- Control Sidebar -->
-            {# <aside class="control-sidebar control-sidebar-dark">
-                <!-- Control sidebar content goes here -->
-                <div class="p-3">
-                <h5>Title</h5>
-                <p>Sidebar content</p>
-                </div>
-            </aside> #}
-            <!-- /.control-sidebar -->
 
             <!-- Main Footer -->
             <footer class="main-footer">
