--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,11 +1,20 @@
-{% extends 'base-admin.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    .example-wrapper {
+        margin: 1em auto;
+        max-width: 800px;
+        width: 95%;
+        font: 18px/1.5 sans-serif;
+    }
+
+    .example-wrapper code {
+        background: #F5F5F5;
+        padding: 2px 6px;
+    }
 </style>
 
 <div class="example-wrapper">
@@ -13,8 +22,12 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code><a href="{{ 'C:/laragon/www/ludoetsophie/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/laragon/www/ludoetsophie/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
+        <li>Your controller at
+            <code><a href="{{ 'C:/laragon/www/ludoetsophie/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code>
+        </li>
+        <li>Your template at
+            <code><a href="{{ 'C:/laragon/www/ludoetsophie/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code>
+        </li>
     </ul>
 </div>
 {% endblock %}
