--- a/templates/languages/new.html.twig
+++ b/templates/languages/new.html.twig
@@ -3,9 +3,30 @@
 {% block title %}New Languages{% endblock %}
 
 {% block body %}
-    <h1>Create new Languages</h1>
+<!-- Content Header (Page header) -->
+<div class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1 class="m-0 text-dark">Ludo et Sophie - Nouvel attribut</h1>
+            </div><!-- /.col -->
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
+                    <li class="breadcrumb-item active">Attributs</li>
+                </ol>
+            </div><!-- /.col -->
+        </div><!-- /.row -->
+    </div><!-- /.container-fluid -->
+</div>
+<!-- /.content-header -->
 
-    {{ include('languages/_form.html.twig') }}
+<!-- Main content -->
+<div class="content">
+    <div class="container-fluid">Create new Languages</h1>
 
-    <a href="{{ path('languages_index') }}">back to list</a>
-{% endblock %}
+        {{ include('languages/_form.html.twig') }}
+
+        <a href="{{ path('languages_index') }}">back to list</a>
+    </div>
+</div>{% endblock %}
