--- a/templates/messages/index.html.twig
+++ b/templates/messages/index.html.twig
@@ -3,32 +3,55 @@
 {% block title %}Messages index{% endblock %}
 
 {% block body %}
-    <h1>Messages index</h1>
+<!-- Content Header (Page header) -->
+<div class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1 class="m-0 text-dark">Ludo et Sophie - Nouvel attribut</h1>
+            </div><!-- /.col -->
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
+                    <li class="breadcrumb-item active">Attributs</li>
+                </ol>
+            </div><!-- /.col -->
+        </div><!-- /.row -->
+    </div><!-- /.container-fluid -->
+</div>
+<!-- /.content-header -->
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Subject</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for message in messages %}
-            <tr>
-                <td>{{ message.name }}</td>
-                <td>{{ message.email }}</td>
-                <td>{{ message.subject }}</td>
-                <td>
-                    <a href="{{ path('messages_show', {'id': message.id}) }}">Lire</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="4">Aucun message</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+<!-- Main content -->
+<div class="content">
+    <div class="container-fluid">Messages index</h1>
 
-{% endblock %}
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Adresse email</th>
+                    <th>Nom</th>
+                    <th>Objet</th>
+                    <th>Envoyé le</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for message in messages %}
+                <tr>
+                    <td>{{ message.email }}</td>
+                    <td>{{ message.name }}</td>
+                    <td>{{ message.subject }}</td>
+                    <td>{{ message.sentAt | date('d.m.Y') }}</td>
+                    <td>
+                        <a href="{{ path('messages_show', {'id': message.id}) }}">Lire</a>
+                    </td>
+                </tr>
+                {% else %}
+                <tr>
+                    <td colspan="4">Aucun message</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+
+    </div>
+</div>{% endblock %}
