--- a/templates/messages/show.html.twig
+++ b/templates/messages/show.html.twig
@@ -3,34 +3,55 @@
 {% block title %}Messages{% endblock %}
 
 {% block body %}
-    <h1>Messages</h1>
+<!-- Content Header (Page header) -->
+<div class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1 class="m-0 text-dark">Ludo et Sophie - Nouvel attribut</h1>
+            </div><!-- /.col -->
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
+                    <li class="breadcrumb-item active">Attributs</li>
+                </ol>
+            </div><!-- /.col -->
+        </div><!-- /.row -->
+    </div><!-- /.container-fluid -->
+</div>
+<!-- /.content-header -->
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Name</th>
-                <td>{{ message.name }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ message.email }}</td>
-            </tr>
-            <tr>
-                <th>Phone</th>
-                <td>{{ message.phone }}</td>
-            </tr>
-            <tr>
-                <th>Subject</th>
-                <td>{{ message.subject }}</td>
-            </tr>
-            <tr>
-                <th>Message</th>
-                <td>{{ message.message }}</td>
-            </tr>
-        </tbody>
-    </table>
+<!-- Main content -->
+<div class="content">
+    <div class="container-fluid">Messages</h1>
 
-    <a href="{{ path('messages_index') }}">back to list</a>
+        <table class="table">
+            <tbody>
+                <tr>
+                    <th>Name</th>
+                    <td>{{ message.name }}</td>
+                </tr>
+                <tr>
+                    <th>Email</th>
+                    <td>{{ message.email }}</td>
+                </tr>
+                <tr>
+                    <th>Phone</th>
+                    <td>{{ message.phone }}</td>
+                </tr>
+                <tr>
+                    <th>Subject</th>
+                    <td>{{ message.subject }}</td>
+                </tr>
+                <tr>
+                    <th>Message</th>
+                    <td>{{ message.message }}</td>
+                </tr>
+            </tbody>
+        </table>
 
-    {{ include('messages/_delete_form.html.twig') }}
-{% endblock %}
+        <a href="{{ path('messages_index') }}">back to list</a>
+
+        {{ include('messages/_delete_form.html.twig') }}
+    </div>
+</div>{% endblock %}
