--- a/templates/pages/edit.html.twig
+++ b/templates/pages/edit.html.twig
@@ -3,11 +3,32 @@
 {% block title %}Edit Pages{% endblock %}
 
 {% block body %}
-    <h1>Edit Pages</h1>
+<!-- Content Header (Page header) -->
+<div class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1 class="m-0 text-dark">Ludo et Sophie - Nouvel attribut</h1>
+            </div><!-- /.col -->
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
+                    <li class="breadcrumb-item active">Attributs</li>
+                </ol>
+            </div><!-- /.col -->
+        </div><!-- /.row -->
+    </div><!-- /.container-fluid -->
+</div>
+<!-- /.content-header -->
 
-    {{ include('pages/_form.html.twig', {'button_label': 'Update'}) }}
+<!-- Main content -->
+<div class="content">
+    <div class="container-fluid">Edit Pages</h1>
 
-    <a href="{{ path('pages_index') }}">back to list</a>
+        {{ include('pages/_form.html.twig', {'button_label': 'Update'}) }}
 
-    {{ include('pages/_delete_form.html.twig') }}
-{% endblock %}
+        <a href="{{ path('pages_index') }}">back to list</a>
+
+        {{ include('pages/_delete_form.html.twig') }}
+    </div>
+</div>{% endblock %}
