--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -3,9 +3,27 @@
 {% block title %}Products index{% endblock %}
 
 {% block body %}
+<!-- Content Header (Page header) -->
+    <div class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1 class="m-0 text-dark">Ludo et Sophie - Nouvel attribut</h1>
+            </div><!-- /.col -->
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
+                <li class="breadcrumb-item active">Attributs</li>
+                </ol>
+            </div><!-- /.col -->
+            </div><!-- /.row -->
+        </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.content-header -->
 
-
-        <h1>Products index</h1>
+    <!-- Main content -->
+    <div class="content">
+        <div class="container-fluid">Edit Products</h1>
 
         <table class="table">
             <thead>
@@ -64,4 +82,4 @@
         <a href="{{ path('products_new') }}">Create new</a>
 
 
-{% endblock %}
+</div></div>{% endblock %}
