--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -2,8 +2,28 @@
 
 {% block title %}Users index{% endblock %}
 
-{% block body %}
-    <h1>Users index</h1>
+{% block body %}    
+<!-- Content Header (Page header) -->
+    <div class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1 class="m-0 text-dark">Ludo et Sophie - Nouvel attribut</h1>
+            </div><!-- /.col -->
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
+                <li class="breadcrumb-item active">Attributs</li>
+                </ol>
+            </div><!-- /.col -->
+            </div><!-- /.row -->
+        </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.content-header -->
+
+    <!-- Main content -->
+    <div class="content">
+        <div class="container-fluid">Users index</h1>
 
     <table class="table">
         <thead>
@@ -35,4 +55,4 @@
     </table>
 
     <a href="{{ path('users_new') }}">Create new</a>
-{% endblock %}
+</div></div>{% endblock %}
