--- a/templates/users/new.html.twig
+++ b/templates/users/new.html.twig
@@ -2,10 +2,30 @@
 
 {% block title %}New Users{% endblock %}
 
-{% block body %}
-    <h1>Create new Users</h1>
+{% block body %}    
+<!-- Content Header (Page header) -->
+    <div class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1 class="m-0 text-dark">Ludo et Sophie - Nouvel attribut</h1>
+            </div><!-- /.col -->
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
+                <li class="breadcrumb-item active">Attributs</li>
+                </ol>
+            </div><!-- /.col -->
+            </div><!-- /.row -->
+        </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.content-header -->
+
+    <!-- Main content -->
+    <div class="content">
+        <div class="container-fluid">Create new Users</h1>
 
     {{ include('users/_form.html.twig') }}
 
     <a href="{{ path('users_index') }}">back to list</a>
-{% endblock %}
+</div></div>{% endblock %}
